# bazel-dagger-example

./: .gitignore  README.md  WORKSPACE
app/: BUILD.bazel  CoffeeMachine.kt  app.kt
test/: BUILD  KotlinTest.kt
