load("@rules_java//java:defs.bzl", "java_binary")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_library")
load("@io_bazel_rules_kotlin//kotlin:jvm.bzl", "kt_jvm_test")
load("@dagger//:workspace_defs.bzl", "dagger_rules")

dagger_rules()

kt_jvm_library(
    name = "app_lib",
    srcs = glob(["**/*.kt"]),
    deps = [
        ":dagger",
    ],
)

java_binary(
    name = "myapp",
    main_class = "app.MyApp",
    runtime_deps = [":app_lib"],
)
